--- a/build.xml
+++ b/build.xml
@@ -186,6 +186,20 @@
 		<my.signjar jar="${theFile}" signedjar="${theFile}" />
 	</target>
 
+	<macrodef name="webstart.jar" >
+		<attribute name="jnlp.file"/>
+		<attribute name="jar.file" />
+		<attribute name="temp.file" />
+		<sequential>
+			<copy file="${webstart.dir}/@{jnlp.file}" tofile="${dist.dir}/JNLP-INF/APPLICATION.JNLP" overwrite="true"/>
+			<jar jarfile="${webstart.dir}/@{jar.file}" update="false" index="true" filesetmanifest="merge">
+				<fileset dir="${dist.dir}" includes="JNLP-INF/*"/>
+				<zipgroupfileset file="@{temp.file}" />
+			</jar>
+			<my.signjar jar="${webstart.dir}/@{jar.file}" signedjar="${webstart.dir}/@{jar.file}" />
+		</sequential>
+	</macrodef>
+
 	<target name="webstart" depends="jar, bundles_properties" description="Create webstart-compatible IGB jars">
 		<mkdir dir="${webstart.dir}" />
 
@@ -213,26 +227,9 @@
 		<property name="temp.jar" value="${webstart.dir}/${igb.jar.name}.tmp.jar" />
 		<igb.executable jarfile="${temp.jar}" index="false" />
 		
-		<copy file="${webstart.dir}/igb.jnlp" tofile="${dist.dir}/JNLP-INF/APPLICATION.JNLP" overwrite="true"/>
-		<jar jarfile="${webstart.dir}/${igb.jar.name}.jar" update="false" index="true" filesetmanifest="merge">
-			<fileset dir="${dist.dir}" includes="JNLP-INF/*"/>
-			<zipgroupfileset file="${temp.jar}" />
-		</jar>
-		<my.signjar jar="${webstart.dir}/${igb.jar.name}.jar" signedjar="${webstart.dir}/${igb.jar.name}.jar" />
-
-		<copy file="${webstart.dir}/igb-large.jnlp" tofile="${dist.dir}/JNLP-INF/APPLICATION.JNLP" overwrite="true"/>
-		<jar jarfile="${webstart.dir}/${igb.jar.large.name}.jar" update="false" index="true" filesetmanifest="merge">
-			<fileset dir="${dist.dir}" includes="JNLP-INF/*"/>
-			<zipgroupfileset file="${temp.jar}" />
-		</jar>
-		<my.signjar jar="${webstart.dir}/${igb.jar.large.name}.jar" signedjar="${webstart.dir}/${igb.jar.large.name}.jar" />
-
-		<copy file="${webstart.dir}/igb-5GB.jnlp" tofile="${dist.dir}/JNLP-INF/APPLICATION.JNLP" overwrite="true"/>
-		<jar jarfile="${webstart.dir}/${igb.jar.5GB.name}.jar" index="true" filesetmanifest="merge">
-			<fileset dir="${dist.dir}" includes="JNLP-INF/*"/>
-			<zipgroupfileset file="${temp.jar}" />
-		</jar>
-		<my.signjar jar="${webstart.dir}/${igb.jar.5GB.name}.jar" signedjar="${webstart.dir}/${igb.jar.5GB.name}.jar" />
+		<webstart.jar temp.file="${temp.jar}" jar.file="${igb.jar.name}.jar" jnlp.file="igb.jnlp" />
+		<webstart.jar temp.file="${temp.jar}" jar.file="${igb.jar.large.name}.jar" jnlp.file="igb-large.jnlp" />
+		<webstart.jar temp.file="${temp.jar}" jar.file="${igb.jar.5GB.name}.jar" jnlp.file="igb-5GB.jnlp" />
 
 		<delete dir="${dist.dir}/JNLP-INF" />
 		<delete file="${temp.jar}" />
