--- a/build.xml
+++ b/build.xml
@@ -201,7 +201,7 @@
 		</sequential>
 	</macrodef>
 
-	<target name="webstart" depends="jar, bundles_properties" description="Create webstart-compatible IGB jars">
+	<target name="webstart" depends="jar, bundles_properties, create.bundles.list" description="Create webstart-compatible IGB jars">
 		<mkdir dir="${webstart.dir}" />
 
 		<delete file="${webstart.dir}/das2server.jar" />
@@ -210,7 +210,7 @@
 		<copy file="${jnlp.icon.path}" tofile="${webstart.dir}/${jnlp.icon.name}" />
 <!--		<copy file="${jnlp.splashicon.path}" tofile="${webstart.dir}/${jnlp.splashicon.name}" />-->
 
-		<taskdef name="foreach" classname="net.sf.antcontrib.logic.ForEach" classpathref="contrib.path" />
+		<!--taskdef name="foreach" classname="net.sf.antcontrib.logic.ForEach" classpathref="contrib.path" />
 		<foreach target="sign" parallel="true" inheritall="true" param="theFile">
 			<fileset dir="${bundle.dir}">
 				<include name="**/*.jar"/>
@@ -218,11 +218,11 @@
 			<fileset dir="${ext.bundle.dir}">
 				<include name="*.jar"/>
 			</fileset>
-		</foreach>
+		</foreach -->
 
 		<mkdir dir="${dist.dir}/JNLP-INF" />
 		<property name="temp.jar" value="${webstart.dir}/${igb.jar.name}.tmp.jar" />
-		<igb.executable jarfile="${temp.jar}" index="false" />
+		<igb.launcher jarfile="${temp.jar}" index="false" />
 
 		<webstart.jar temp.file="${temp.jar}" jar.file="${igb.jar.name}.jar" jnlp.file="igb.jnlp" />
 		<webstart.jar temp.file="${temp.jar}" jar.file="${igb.jar.large.name}.jar" jnlp.file="igb-large.jnlp" />
