Revert back to using packaged jar.
git-svn-id: http://svn.code.sf.net/p/genoviz/code/trunk@15727 80d5a9c2-7d8c-4c9f-9369-4e03bca4d2bd

--- a/core/main/resources/config.properties
+++ b/core/main/resources/config.properties
@@ -79,7 +79,7 @@ felix.auto.deploy.action=install,start
 #felix.auto.start.1=
 
 # This should be replaced by felix.auto.start
-felix.autoload.bundles=@felix.auto.start@
+#felix.autoload.bundles=@felix.auto.start@
 
 felix.log.level=1
 
