Moving headless export to genometry package.
git-svn-id: http://svn.code.sf.net/p/genoviz/code/trunk@15755 80d5a9c2-7d8c-4c9f-9369-4e03bca4d2bd

--- a/core/igb/ant.properties
+++ b/core/igb/ant.properties
@@ -1,5 +1,5 @@
 name=Integrated Genome Browser
 project=igb
-classpath=${genoviz}/build:${genometry}/build:${common}/build:${lib.dir}/affx_fusion.jar:${lib.dir}/BigWig.jar:${lib.dir}/freehep-2.1.1.jar:${lib.dir}/colt.jar:${lib.dir}/jide.jar:${osgi.impl}:${lib.dir}/swing-layout.jar:${igb_service}/build:${window_service}/build:${config_service}/build:${HeatmapEditor}/build:${lib.dir}/commons-lang3-3.1.jar:${lib.dir}/be.pwnt.jflow_1.0.0.jar:${lib.dir}/tribble.jar:${lib.dir}/lambdaj-2.4-with-dependencies.jar:${lib.dir}/JGoogleAnalytics_0.4.jar:${sam}/dist/sam--igbext.jar
+classpath=${genoviz}/build:${genometry}/build:${common}/build:${lib.dir}/affx_fusion.jar:${lib.dir}/BigWig.jar:${lib.dir}/colt.jar:${lib.dir}/jide.jar:${osgi.impl}:${lib.dir}/swing-layout.jar:${igb_service}/build:${window_service}/build:${config_service}/build:${HeatmapEditor}/build:${lib.dir}/commons-lang3-3.1.jar:${lib.dir}/be.pwnt.jflow_1.0.0.jar:${lib.dir}/tribble.jar:${lib.dir}/lambdaj-2.4-with-dependencies.jar:${lib.dir}/JGoogleAnalytics_0.4.jar:${sam}/dist/sam--igbext.jar
 report.classpath=${classpath}:${lib.dir}/image4j.jar
 plugin-jar=true
