Renaming the buttons as per IGBD-391
git-svn-id: http://svn.code.sf.net/p/genoviz/code/trunk@15805 80d5a9c2-7d8c-4c9f-9369-4e03bca4d2bd

--- a/core/igb/resources/igb.properties
+++ b/core/igb/resources/igb.properties
@@ -5,7 +5,7 @@ alwaysAnonymous=Always use anonymous access
 authOptional=The server "{0}" requested authentication.  Authentication to this server is optional however accessing this server anonymously will limit what data sets you can access.
 authRequired=The server "{0}" requires authentication.
 authToServer=Authenticate to Server
-cancel=Cancel
+cancel=No ,Thank You
 editMenu=Edit
 editMenuMnemonic=E
 fileMenu=File
@@ -15,7 +15,7 @@ tabsMenuMnemonic=B
 helpMenu=Help
 helpMenuMnemonic=H
 login=Login
-tryagain=Try Again
+tryagain=Yes ,Try Again
 errorLogin=The username or password you entered is incorrect.
 # 0 - menu item
 menuItemHasDialog={0}\u2026
