--- a/build.properties
+++ b/build.properties
@@ -8,9 +8,9 @@ igb.jar.5GB.name=igb_exe-5GB
 # point to a directory that has the custom bundles to include
 ext.bundle.dir=${basedir}/plugins/ext
 # list the optional bundles in IGB to include
-include.bundles=plugins_page,Thresholding,RestrictionSites,ExternalView,PropertyView,SearchView,AnnotationTab,GraphTab,Bookmark,SearchModeIdOrProps,SearchModeLucene,KeyWordSearch,BigBedHandler,BigWigHandler,IGBScript,Tutorial,Survey,BAMIndexer,NCBIBlast,Update,SequenceViewer
+include.bundles=plugins_page,Thresholding,RestrictionSites,ExternalView,PropertyView,SearchView,AnnotationTab,GraphTab,Bookmark,SearchModeIdOrProps,SearchModeLucene,KeyWordSearch,BigBedHandler,BigWigHandler,IGBScript,Tutorial,Survey,NCBIBlast,Update,SequenceViewer
 # list the bundles that are not included in IGB
-not.include.bundles=DASRegistryServerType,TableView,FindAnnotations,GeometricMean,OverlapAnnotationOperator,MergeAnnotationOperator,PythonScript,RubyScript,SampleSelection,SearchModeSymmetryFilter,TallyHandler,ThousandGenomesServerType,TranscriptIsoform,TutorialHelper,ParentOperators
+not.include.bundles=DASRegistryServerType,TableView,FindAnnotations,GeometricMean,OverlapAnnotationOperator,MergeAnnotationOperator,PythonScript,RubyScript,SampleSelection,SearchModeSymmetryFilter,TallyHandler,ThousandGenomesServerType,TranscriptIsoform,TutorialHelper,ParentOperators,BAMIndexer
 # the default preferences file location
 def.prefs.dir=${basedir}/core/igb/resources
 # the OSGi implementation
