IGBD-404 .Toolbar and main view tooltips (not data tooltips)
git-svn-id: http://svn.code.sf.net/p/genoviz/code/trunk@15867 80d5a9c2-7d8c-4c9f-9369-4e03bca4d2bd

--- a/core/igb/resources/igb.properties
+++ b/core/igb/resources/igb.properties
@@ -5,7 +5,7 @@ alwaysAnonymous=Always use anonymous access
 authOptional=The server "{0}" requested authentication.  Authentication to this server is optional however accessing this server anonymously will limit what data sets you can access.
 authRequired=The server "{0}" requires authentication.
 authToServer=Authenticate to Server
-cancel=No ,Thank You
+cancel=cancel
 editMenu=Edit
 editMenuMnemonic=E
 fileMenu=File
@@ -74,7 +74,7 @@ createGenome=Create Genome
 clearAll=Clear All
 clearGraphs=Clear Graphs
 closeSequenceViewer=Close Sequence Viewer
-print=Print Main View with Labels
+print=Print...
 printWhole=Print Whole Frame
 export=Export
 saveTrackAction=Save Track As
@@ -237,7 +237,7 @@ loadPreviousGenome=Loading previous genome {0} ...
 loadingChr=Loading chromosomes for {0}
 loadingResidue=Loading residues for {0}
 loadGenome=Loading whole genome for {0}
-loadFeature=Loading whole feature for {0}
+loadFeature=Loading whole data set for {0}
 retrieveChr=Retrieving chromosomes for {0}
 lowMemory=Running low on memory. Canceling current task.
 loadAllResidues=load all residues for {0}
