IGBD-404 .Toolbar and main view tooltips (not data tooltips)
git-svn-id: http://svn.code.sf.net/p/genoviz/code/trunk@15867 80d5a9c2-7d8c-4c9f-9369-4e03bca4d2bd

--- a/plugins/Bookmark/resources/bookmark.properties
+++ b/plugins/Bookmark/resources/bookmark.properties
@@ -11,3 +11,5 @@ clearBookmarks=Clear Bookmarks
 bookmarksMenu=Bookmarks
 bookmarksMenuMnemonic=B
 copyBookmarkToClipboard=Copy Bookmark as URL
+saveSessionTooltip=Save an IGB session file (XML)
+openSessionTooltip=Open an IGB session file (XML)
