IGBD-404 .Toolbar and main view tooltips (not data tooltips)
git-svn-id: http://svn.code.sf.net/p/genoviz/code/branches/igb_8_0@15868 80d5a9c2-7d8c-4c9f-9369-4e03bca4d2bd

--- a/core/igb/resources/igb.properties
+++ b/core/igb/resources/igb.properties
@@ -276,7 +276,7 @@ scrollModeToolTip=Move
 autoloadToolTip=AutoLoad Threshold
 centerZoomStripe=Center at zoom stripe
 goToRegion=Go To Region
-goToRegionToolTip=Enter search term or region
+goToRegionToolTip=Click to search
 nextSearchSpan=Next Search Span
 
 #OptionPane
@@ -371,3 +371,21 @@ color_by_length=Length
 color_by_mapqscore=Mapq Score
 color_by_property=Property
 color_by_score=Score
+
+#Toolbar Icon tooltips
+openFileTooltip=Open a data or sequence file
+openCustomGenomeTooltip=Open a custom genome
+exportImageTooltip=Save an image file (PNG, SVG, or JPEG)
+preferencesTooltip=Open Preferences window 
+exitTooltip=Quit IGB
+goToIGBUserGuideTooltip=Open IGB User's Guide in your Web browser
+leftGreenArrowTooltip=Move left
+rightGreenArrowTooltip=Move right
+autoscrollTooltip=Auto scroll to the right 
+stopAutoscrollTooltip=Stop scrolling to the right
+
+#Zoom buttons tooltips
+verticalZoomerMinusButtonTooltip =Shrink tracks vertically, zoom out
+verticalZoomerPlusButtonTooltip =Expand tracks vertically, zoom in
+horizontalZoomerMinusButtonTooltip =Zoom out, show more genome
+horizontalZoomerPlusButtonTooltip =Zoom in, show more detail
