IGB-406 .Add tool tips for tabbed panels
git-svn-id: http://svn.code.sf.net/p/genoviz/code/trunk@15874 80d5a9c2-7d8c-4c9f-9369-4e03bca4d2bd

--- a/plugins/AnnotationTab/resources/annotation.properties
+++ b/plugins/AnnotationTab/resources/annotation.properties
@@ -83,3 +83,7 @@ egr=Scored Interval Graph
 gr=Text Graph
 sgr=Text Graph with Sequence Names
 bgr=Binary Graph
+
+#tooltips
+annotationTooltip=Change annotation track color, labels, stack height, etc. (Includes gene models, read alignments, ESTs.)
+
