--- a/plugins/Bookmark/resources/bookmark.properties
+++ b/plugins/Bookmark/resources/bookmark.properties
@@ -13,3 +13,6 @@ bookmarksMenuMnemonic=B
 copyBookmarkToClipboard=Copy Bookmark as URL
 saveSessionTooltip=Save an IGB session file (XML)
 openSessionTooltip=Open an IGB session file (XML)
+
+#tooltips
+bookmarksTooltip =View or edit bookmarks.
