--- a/plugins/ExternalView/resources/external.properties
+++ b/plugins/ExternalView/resources/external.properties
@@ -45,3 +45,6 @@ regionTooLargeError=Error: the selected region is too large (>100000)
 translateUCSCEnsembleError=Error: Could not translate UCSC query for ENSEMBL: {0}
 findImageURLError=Error: could not find image URL in page {0}
 ensemblUrlError=Unfortunately I could not map the current genome to an ENSEMBL URL
+
+#tooltips
+externalViewTooltip =View region in UCSC or Ensembl Genome Browsers. 
