--- a/plugins/GraphTab/resources/graph.properties
+++ b/plugins/GraphTab/resources/graph.properties
@@ -8,3 +8,6 @@ operatorExactTooltip=Select exactly {0} {1}s
 operatorMinTooltip=Select at least {0} {1}s
 operatorMaxTooltip=Select at least {0} {1}s
 operatorRangeTooltip=Select between {0} and {1} {2}s
+
+#tooltips
+graphTooltip=Change graph track scale, color, etc. (Includes read coverage graphs.)
