--- a/plugins/PropertyView/resources/property.properties
+++ b/plugins/PropertyView/resources/property.properties
@@ -1,6 +1,7 @@
 #Tab names
 propertyViewTab=Selection Info
 noID=no ID
+selectionInfoTooltip =View information about selected items.
 
 #JTableCutPasteAdapter
 invalidSelection=Invalid selection
