--- a/plugins/RestrictionSites/resources/restrictions.properties
+++ b/plugins/RestrictionSites/resources/restrictions.properties
@@ -14,3 +14,6 @@ notFound=Cannot find restriction enzyme file '{0}'.\nRestriction mapping will no
 loadError=Problem loading restriction site file, aborting load\n{0}
 noSeq=No Sequence selected. Please select a sequence.
 notAvail=Residues for seq not available, search aborted.
+
+#tooltips
+restrictionSitesTooltip =Search for and view restriction enzyme sites.
