--- a/plugins/SampleSelection/resources/selection.properties
+++ b/plugins/SampleSelection/resources/selection.properties
@@ -4,3 +4,7 @@ selectType=Select Type
 separateTracks=Separate Tracks
 joinTracks=Join Tracks
 variable=Variable
+
+#tooltip
+pluginsTooltip =Add or remove plug-in features to IGB.
+
