--- a/plugins/SearchView/resources/search.properties
+++ b/plugins/SearchView/resources/search.properties
@@ -27,3 +27,6 @@ searchTablePattern=Pattern
 searchTableColor=Color
 searchTableStrand=Strand
 searchTableMatch=Matched sequence
+
+#tooltips
+advancedSearchTooltip =Search by sequence, keyword, or name.
