--- a/plugins/plugins_page/resources/plugins.properties
+++ b/plugins/plugins_page/resources/plugins.properties
@@ -26,3 +26,7 @@ bundleInstalled=bundle {0};{1} installed
 bundleUninstalled=bundle {0};{1} uninstalled
 internalError1=no latest for {0}
 internalError2=error at index={0}, size={1}
+
+#tooltips
+pluginsTooltip =Add or remove plug-in features to IGB.
+
