IGB-406 .Add tool tips for tabbed panels merged changes r15874-trunk
git-svn-id: http://svn.code.sf.net/p/genoviz/code/branches/igb_8_0@15875 80d5a9c2-7d8c-4c9f-9369-4e03bca4d2bd

--- a/core/igb/resources/igb.properties
+++ b/core/igb/resources/igb.properties
@@ -385,7 +385,13 @@ autoscrollTooltip=Auto scroll to the right
 stopAutoscrollTooltip=Stop scrolling to the right
 
 #Zoom buttons tooltips
-verticalZoomerMinusButtonTooltip =Shrink tracks vertically, zoom out
-verticalZoomerPlusButtonTooltip =Expand tracks vertically, zoom in
-horizontalZoomerMinusButtonTooltip =Zoom out, show more genome
-horizontalZoomerPlusButtonTooltip =Zoom in, show more detail
+verticalZoomerMinusButtonTooltip=Shrink tracks vertically, zoom out
+verticalZoomerPlusButtonTooltip=Expand tracks vertically, zoom in
+horizontalZoomerMinusButtonTooltip=Zoom out, show more genome
+horizontalZoomerPlusButtonTooltip=Zoom in, show more detail
+
+#Toolbar for tabbed panel
+dataAccessTooltip=Choose data sets to load into IGB.
+selectionInfoTooltip=View information about selected items.
+slicedViewTooltip=View data with intronic sequence removed.
+currentGenomeTooltip=Select sequence, species, or genome version.
