IGBD-403 Changing the title
git-svn-id: http://svn.code.sf.net/p/genoviz/code/trunk@15876 80d5a9c2-7d8c-4c9f-9369-4e03bca4d2bd

--- a/core/igb/resources/igb.properties
+++ b/core/igb/resources/igb.properties
@@ -82,7 +82,7 @@ saveTrackAction=Save Track As
 saveTrackActionTooltip=Save selected track as a file
 saveSelectedAnnotationAction=Save Selected Annotations as File
 saveSelectedAnnotationActionToolTip=Save selected annotations as file
-addNewSpecies=Open Custom Genome...
+addNewSpecies=Open Custom Genome
 exit=Exit
 
 #Export Menu
