IGBD-404 Modifying the tooltips and adding some
git-svn-id: http://svn.code.sf.net/p/genoviz/code/trunk@15895 80d5a9c2-7d8c-4c9f-9369-4e03bca4d2bd

--- a/plugins/Bookmark/resources/bookmark.properties
+++ b/plugins/Bookmark/resources/bookmark.properties
@@ -11,8 +11,8 @@ clearBookmarks=Clear Bookmarks
 bookmarksMenu=Bookmarks
 bookmarksMenuMnemonic=B
 copyBookmarkToClipboard=Copy Bookmark as URL
-saveSessionTooltip=Save an IGB session file (XML)
-openSessionTooltip=Open an IGB session file (XML)
 
 #tooltips
 bookmarksTooltip =View or edit bookmarks.
+saveSessionTooltip=Save an IGB session file (XML).
+openSessionTooltip=Open an IGB session file (XML).
