IGBD-404 Modifying the tooltips and adding some merging with trunk 15895
git-svn-id: http://svn.code.sf.net/p/genoviz/code/branches/igb_8_0@15896 80d5a9c2-7d8c-4c9f-9369-4e03bca4d2bd

--- a/core/igb/resources/igb.properties
+++ b/core/igb/resources/igb.properties
@@ -62,7 +62,6 @@ trackInfo=Track Info
 chooseSeq=Select a chromosome sequence
 sequenceColumnHeader=({0}) Sequence(s)
 lengthColumnHeader=Length
-sequenceHeaderLengthToolTip=Click to sort by size
 
 # File Menu
 openFile=Open File
@@ -77,9 +76,7 @@ print=Print Main View with Labels
 printWhole=Print Whole Frame
 export=Export
 saveTrackAction=Save Track As
-saveTrackActionTooltip=Save selected track as a file
 saveSelectedAnnotationAction=Save Selected Annotations as File
-saveSelectedAnnotationActionToolTip=Save selected annotations as file
 addNewSpecies=Open Custom Genome
 exit=Exit
 
@@ -110,8 +107,6 @@ showFullFilePathInTrack=Show Full File Path In Track
 startAutoScroll=Start Auto Scroll
 stopAutoScroll=Stop Auto Scroll
 configureAutoScroll=Configure Auto Scroll
-togglePropertiesTooltip=Show data tooltip
-toggleConstantPropertiesTooltip=Show Constant Properties in Tooltip
 ViewGenomicSequenceInSeqViewer=View Genomic Sequence in Sequence Viewer
 ViewReadSequenceInSeqViewer=View Read Sequence in Sequence Viewer
 drawCollapseControl=Show Collapse Option
@@ -174,13 +169,11 @@ showAllAction=Show All Hidden
 changeFGColorAction=Change ForeGround Color
 changeBGColorAction=Change BackGround Color
 changeExpandMaxAction=Change Stack Height for Selected Annotation Tracks
-changeExpandMaxActionToolTip=Change stack height for selected annotation tracks
 changeExpandMaxAllAction=Adjust Max Stack Height All...
 changeExpandMaxOptimizeAction=Optimize Stack Height for Selected Annotation Tracks
 useResidueMask=Show Mismatch Only
 shadeBasedOnQualityScore=Shade bases using quality score
 #Optimize button in annotation tab has this tooptip in hard code.
-changeExpandMaxOptimizeActionTooltip=Optimize stack height for selected annotation tracks so that all annotations are shown
 changeTierHeightAction=Change Height
 changeLabelColorAction=Change Track Label Color
 changeForwardColorAction=Strand: Change Color, Forward
@@ -212,9 +205,7 @@ changeFontSizeAction=Change Font Size
 useAsReferenceSeqAction=Use as Reference Sequence
 cancelAction=Cancel
 cancelAllAction=Cancel All
-cancelAllActionTooltip=cancel all running tasks
 canonicalizeTracks=Set graphs to equal scale
-canonicalizeTracksTooltip=Make the scales of the selected tracks match so they can be readily compared.
 setSummaryThresholdAction=Set Summary Threshold to Current View
 selectFontSize=Select font size
 changeSelectedTrackFontSize=Change Selected Track Font Size
@@ -234,13 +225,6 @@ LoadStrategy=Don't Load
 visibleStrategy=Region
 chromosomeStrategy=Chromosome
 genomeStrategy=Genome
-
-#Features Table
-noLoadCBToolTip=Don't load
-autoLoadCBToolTip=Automatically load region in view upon zooming and scrolling
-visibleCBToolTip=Load region in view after clicking Refresh Data 
-chromosomeCBToolTip=Load selected chromosome after clicking Refresh Data
-genomeCBToolTip=Automatically load entire genome
 
 #Progress messages
 executeScriptLine=Executing script line: {0}
@@ -269,14 +253,8 @@ restoreAlignment=Restore Read Sequence
 showMismatch=Show Mismatches Only
 
 #SeqMapView
-horizontalZoomToolTip=Horizontal Zoom
-verticalZoomToolTip=Vertical Zoom
-selectModeToolTip=Select
-scrollModeToolTip=Move
-autoloadToolTip=AutoLoad Threshold
 centerZoomStripe=Center at zoom stripe
 goToRegion=Go To Region
-goToRegionToolTip=Click to search
 nextSearchSpan=Next Search Span
 
 #OptionPane
@@ -355,16 +333,11 @@ splitButton=Split
 goButton=Go
 transformationLabel=Unary Op
 operationLabel=Operation
-operatorExactTooltip=Select exactly {0} {1}s
-operatorMinTooltip=Select at least {0} {1}s
-operatorMaxTooltip=Select at least {0} {1}s
-operatorRangeTooltip=Select between {0} and {1} {2}s
-operatorSingleTrackApplyToolTip=Functions apply to a single track
-operatorMultipleTrackApplyToolTip=Functions require two or more tracks
+
 
 #Shortcuts Tab
 optimizeAll =Optimize Stack Height for All Annotation Tracks
-optimizeAllToolTip =Optimize stack height for all annotation tracks so that all annotations are shown
+optimizeAllToolTip =Optimize stack height for all annotation tracks so that all annotations are shown.
 
 #color_by
 color_by_length=Length
@@ -373,25 +346,61 @@ color_by_property=Property
 color_by_score=Score
 
 #Toolbar Icon tooltips
-openFileTooltip=Open a data or sequence file
-openCustomGenomeTooltip=Open a custom genome
-exportImageTooltip=Save an image file (PNG, SVG, or JPEG)
-preferencesTooltip=Open Preferences window 
-exitTooltip=Quit IGB
-goToIGBUserGuideTooltip=Open IGB User's Guide in your Web browser
-leftGreenArrowTooltip=Move left
-rightGreenArrowTooltip=Move right
-autoscrollTooltip=Auto scroll to the right 
-stopAutoscrollTooltip=Stop scrolling to the right
+openFileTooltip=Open a data or sequence file.
+openCustomGenomeTooltip=Open a custom genome.
+exportImageTooltip=Save an image file (PNG, SVG, or JPEG).
+preferencesTooltip=Open Preferences window. 
+exitTooltip=Quit IGB.
+goToIGBUserGuideTooltip=Open IGB User's Guide in your Web browser.
+leftGreenArrowTooltip=Move left.
+rightGreenArrowTooltip=Move right.
+autoscrollTooltip=Auto scroll to the right. 
+stopAutoscrollTooltip=Stop scrolling to the right.
 
 #Zoom buttons tooltips
-verticalZoomerMinusButtonTooltip=Shrink tracks vertically, zoom out
-verticalZoomerPlusButtonTooltip=Expand tracks vertically, zoom in
-horizontalZoomerMinusButtonTooltip=Zoom out, show more genome
-horizontalZoomerPlusButtonTooltip=Zoom in, show more detail
+verticalZoomerMinusButtonTooltip=Shrink tracks vertically, zoom out.
+verticalZoomerPlusButtonTooltip=Expand tracks vertically, zoom in.
+horizontalZoomerMinusButtonTooltip=Zoom out, show more genome.
+horizontalZoomerPlusButtonTooltip=Zoom in, show more detail.
 
 #Toolbar for tabbed panel
 dataAccessTooltip=Choose data sets to load into IGB.
 selectionInfoTooltip=View information about selected items.
 slicedViewTooltip=View data with intronic sequence removed.
 currentGenomeTooltip=Select sequence, species, or genome version.
+goToRegionToolTip=Search by name or enter region.
+cancelAllActionTooltip=cancel all running tasks.
+sequenceHeaderLengthToolTip=Click to sort by size.
+canonicalizeTracksTooltip=Make the scales of the selected tracks match so they can be readily compared.
+
+#seqMapView tooltip
+horizontalZoomToolTip=Horizontal Zoom.
+verticalZoomToolTip=Vertical Zoom.
+selectModeToolTip=Use Selection Tool to select one or more items, click-drag axis to zoom in, or click-drag to move left or right.
+scrollModeToolTip=Use Grab Tool to move main view display in any direction.
+autoloadToolTip=AutoLoad Threshold.
+
+#Features Table
+noLoadCBToolTip=Don't load.
+autoLoadCBToolTip=Automatically load region in view upon zooming and scrolling.
+visibleCBToolTip=Load region in view after clicking Refresh Data. 
+chromosomeCBToolTip=Load selected chromosome after clicking Refresh Data.
+genomeCBToolTip=Automatically load entire genome.
+
+#Operation Panel tooltip
+operatorExactTooltip=Select exactly {0} {1}s.
+operatorMinTooltip=Select at least {0} {1}s.
+operatorMaxTooltip=Select at least {0} {1}s.
+operatorRangeTooltip=Select between {0} and {1} {2}s.
+operatorSingleTrackApplyToolTip=Functions apply to a single track.
+operatorMultipleTrackApplyToolTip=Functions require two or more tracks.
+
+changeExpandMaxOptimizeActionTooltip=Optimize stack height for selected annotation tracks so that all annotations are shown.
+changeExpandMaxActionToolTip=Change stack height for selected annotation tracks.
+saveSelectedAnnotationActionToolTip=Save selected annotations as file.
+saveTrackActionTooltip=Save selected track as a file.
+togglePropertiesTooltip=Show data tooltip.
+toggleConstantPropertiesTooltip=Show Constant Properties in Tooltip.
+hideDataTooltip=Hide data tooltips. Affects main view only.
+showDataTooltip=Show data tooltips. Affects main view only.
+selectionInforTooltip=Click to get information about selected item.
