IGBD-404 Updating tooltip for magnify glass
git-svn-id: http://svn.code.sf.net/p/genoviz/code/trunk@15897 80d5a9c2-7d8c-4c9f-9369-4e03bca4d2bd

--- a/core/igb/resources/igb.properties
+++ b/core/igb/resources/igb.properties
@@ -374,6 +374,7 @@ goToRegionToolTip=Search by name or enter region.
 cancelAllActionTooltip=cancel all running tasks.
 sequenceHeaderLengthToolTip=Click to sort by size.
 canonicalizeTracksTooltip=Make the scales of the selected tracks match so they can be readily compared.
+magnifyGlassTolltip=Click to search.
 
 #seqMapView tooltip
 horizontalZoomToolTip=Horizontal Zoom.
