IGBE-404 change the tooltip for annotation
git-svn-id: http://svn.code.sf.net/p/genoviz/code/trunk@15900 80d5a9c2-7d8c-4c9f-9369-4e03bca4d2bd

--- a/plugins/AnnotationTab/resources/annotation.properties
+++ b/plugins/AnnotationTab/resources/annotation.properties
@@ -85,5 +85,5 @@ sgr=Text Graph with Sequence Names
 bgr=Binary Graph
 
 #tooltips
-annotationTooltip=Change annotation track color, labels, stack height, etc. (Includes gene models, read alignments, ESTs.).
+annotationTooltip=Change annotation track color, labels, stack height, etc. (Includes gene models, read alignments, ESTs.)
 
