Adding back temporarily removed ant zip.
git-svn-id: http://svn.code.sf.net/p/genoviz/code/branches/igb_8_0@15916 80d5a9c2-7d8c-4c9f-9369-4e03bca4d2bd

--- a/build.xml
+++ b/build.xml
@@ -704,9 +704,9 @@
 			</fileset>
 		</chmod>
 
-		<!-- zip destfile="${release.dir}/igb.zip" basedir="${release.dir}">
+		<zip destfile="${release.dir}/igb.zip" basedir="${release.dir}">
 			<include name="igb/**" />
-		</zip -->
+		</zip>
 
 		<!--Since Ant does not preserve executable permission on Unix while
 			creating archive, use unix zip command to create a zip. 
