Removing unnecessary option from creating executable zip.
git-svn-id: http://svn.code.sf.net/p/genoviz/code/trunk@15918 80d5a9c2-7d8c-4c9f-9369-4e03bca4d2bd

--- a/build.xml
+++ b/build.xml
@@ -716,7 +716,7 @@
 			creating archive, use unix zip command to create a zip. 
 			https://ant.apache.org/manual/platform.html -->
 		<exec executable="zip" osfamily="unix" failifexecutionfails="false" dir="${release.dir}">
-			<arg value="-FSr"/> 
+			<arg value="-r"/> 
 			<arg value="igb.zip"/>
 			<arg value="igb"/>
 		</exec>
