Adding start depth operator.
git-svn-id: http://svn.code.sf.net/p/genoviz/code/trunk@15919 80d5a9c2-7d8c-4c9f-9369-4e03bca4d2bd

--- a/core/genometryImpl/resources/genometry.properties
+++ b/core/genometryImpl/resources/genometry.properties
@@ -23,6 +23,9 @@ operator_sequence_depth=Depth
 operator_variant_depth=Depth
 operator_probeset_depth=Depth
 operator_scoredcontainer_depth=Depth
+operator_alignment_start_depth=Start Depth
+operator_annotation_start_depth=Start Depth
+operator_probeset_start_depth=Start Depth
 operator_alignment_summary=Summary
 operator_annotation_summary=Summary
 operator_probeset_summary=Summary
