Renaming to start depth to start summary.
git-svn-id: http://svn.code.sf.net/p/genoviz/code/trunk@15925 80d5a9c2-7d8c-4c9f-9369-4e03bca4d2bd

--- a/core/genometryImpl/resources/genometry.properties
+++ b/core/genometryImpl/resources/genometry.properties
@@ -61,11 +61,12 @@ operator_annotation_xor=Xor
 operator_probeset_xor=Xor
 operator_findjunctions=Find Junctions
 operator_findjunctions_tophat=Find Junctions (TopHat)
-operator_findmate=Paried End
+operator_findmate=Paired End
 
 #filters
 filter_mapping_quality_score=Mapping Quality Score
 filter_mismatch=Mismatch
+filter_filter_by_strand=Filter by strand
 filter_match=Perfect Match
 filter_intron=Reads with gaps
 filter_no_intron=Reads with no gaps
