--- a/core/genometryImpl/resources/genometry.properties
+++ b/core/genometryImpl/resources/genometry.properties
@@ -14,18 +14,18 @@ operator_copysequence=Copy
 operator_alignment_copy=Copy
 operator_annotation_copy=Copy
 operator_probeset_copy=Copy
-operator_alignment_depth=Depth Graph
-operator_annotation_depth=Depth Graph
-operator_probeset_depth=Depth Graph
-operator_graph_depth=Depth Graph
-operator_mismatch_depth=Depth Graph
-operator_sequence_depth=Depth Graph
-operator_variant_depth=Depth Graph
-operator_probeset_depth=Depth Graph
-operator_scoredcontainer_depth=Depth
-operator_alignment_start_depth=Start-Point Summary Graph
-operator_annotation_start_depth=Start-Point Summary Graph
-operator_probeset_start_depth=Start-Point Summary Graph
+operator_alignment_depth=Depth Graph (All)
+operator_annotation_depth=Depth Graph (All)
+operator_probeset_depth=Depth Graph (All)
+operator_graph_depth=Depth Graph (All)
+operator_mismatch_depth=Depth Graph (All)
+operator_sequence_depth=Depth Graph (All)
+operator_variant_depth=Depth Graph (All)
+operator_probeset_depth=Depth Graph (All)
+operator_scoredcontainer_depth=Depth Graph (All)
+operator_alignment_start_depth=Depth Graph (Start)
+operator_annotation_start_depth=Depth Graph (Start)
+operator_probeset_start_depth=Depth Graph (Start)
 operator_alignment_summary=Summary
 operator_annotation_summary=Summary
 operator_probeset_summary=Summary
