Adding missing import.
git-svn-id: http://svn.code.sf.net/p/genoviz/code/trunk@15980 80d5a9c2-7d8c-4c9f-9369-4e03bca4d2bd

--- a/tools/LuceneIndexing/build.xml
+++ b/tools/LuceneIndexing/build.xml
@@ -48,6 +48,7 @@
 		<copy file="${bundle.dir}/icons--igbext.bnd.jar" todir="temp/bundle" />
 		<copy file="${bundle.dir}/jdom-1.1.3.bnd.jar" todir="temp/bundle" />
 		<copy file="${bundle.dir}/commons-pool-1.6.jar" todir="temp/bundle" />
+		<copy file="${bundle.dir}/commons-compress-1.6.jar" todir="temp/bundle" />
 		<mkdir dir="temp" />
 		<copy file="lib/lucene-core-3.6.0.jar" todir="temp/bundle" />
 		<java jar="${lib.dir}/biz.aQute.bnd.jar" fork="true" dir="temp/bundle" >
