IGBE-57 Adding new filter (Filter by strand)
git-svn-id: http://svn.code.sf.net/p/genoviz/code/trunk@15982 80d5a9c2-7d8c-4c9f-9369-4e03bca4d2bd

--- a/core/genometryImpl/resources/genometry.properties
+++ b/core/genometryImpl/resources/genometry.properties
@@ -66,6 +66,7 @@ operator_findmate=Paried End
 #filters
 filter_mapping_quality_score=Mapping Quality Score
 filter_mismatch=Mismatch
+filter_filter_by_strand=Filter by strand
 filter_match=Perfect Match
 filter_intron=Reads with gaps
 filter_no_intron=Reads with no gaps
