IGBD-425 Updating the loadFeature content to load data set
git-svn-id: http://svn.code.sf.net/p/genoviz/code/trunk@15984 80d5a9c2-7d8c-4c9f-9369-4e03bca4d2bd

--- a/core/igb/resources/igb.properties
+++ b/core/igb/resources/igb.properties
@@ -237,7 +237,7 @@ loadPreviousGenome=Loading previous genome {0} ...
 loadingChr=Loading chromosomes for {0}
 loadingResidue=Loading residues for {0}
 loadGenome=Loading whole genome for {0}
-loadFeature=Loading whole feature for {0}
+loadFeature=Loading whole data set for {0}
 retrieveChr=Retrieving chromosomes for {0}
 lowMemory=Running low on memory. Canceling current task.
 loadAllResidues=load all residues for {0}
