Design-126 1)Creating new print dialog box and print action 2)Adding short cut to the tool bar next to export image
git-svn-id: http://svn.code.sf.net/p/genoviz/code/trunk@16000 80d5a9c2-7d8c-4c9f-9369-4e03bca4d2bd

--- a/core/igb/resources/igb.properties
+++ b/core/igb/resources/igb.properties
@@ -74,7 +74,7 @@ createGenome=Create Genome
 clearAll=Clear All
 clearGraphs=Clear Graphs
 closeSequenceViewer=Close Sequence Viewer
-print=Print Main View with Labels
+print=Print...
 printWhole=Print Whole Frame
 export=Export
 saveTrackAction=Save Track As
