updating IGB authenticator button to close
git-svn-id: http://svn.code.sf.net/p/genoviz/code/trunk@16003 80d5a9c2-7d8c-4c9f-9369-4e03bca4d2bd

--- a/core/igb/resources/igb.properties
+++ b/core/igb/resources/igb.properties
@@ -5,7 +5,7 @@ alwaysAnonymous=Always use anonymous access
 authOptional=The server "{0}" requested authentication.  Authentication to this server is optional however accessing this server anonymously will limit what data sets you can access.
 authRequired=The server "{0}" requires authentication.
 authToServer=Authenticate to Server
-cancel=No ,Thank You
+cancel=cancel
 editMenu=Edit
 editMenuMnemonic=E
 fileMenu=File
