removed das2 servers from default server list and removed references to build.version from output to console

--- a/protannot/resources/protannot.properties
+++ b/protannot/resources/protannot.properties
@@ -5,7 +5,7 @@ appName=Protannot
 appNameShort=PA
 appVersion=2.4
 # 0 - appVersion
-appVersionFull={0} (Build @build.version@)
+appVersionFull={0}
 
 cancel=Cancel
 editMenu=Edit
